[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "dharitri-sdk"
version = "1.6.2"
authors = [
  { name="Dharitri" },
]
license = "MIT"
description = "The Dharitri Python SDK."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pycryptodomex==3.19.1",
  "protobuf==6.31.1",
  "cryptography==44.0.1",
  "pynacl==1.5.0",
  "mnemonic==0.21",
  "requests>=2.32.0,<3.0.0"
]

[project.optional-dependencies]
ledger = ["ledgercomm[hid]"]

[project.urls]
"Homepage" = "https://github.com/TerraDharitri/mx-sdk-py"

[tool.hatch.build]
include = [
  "dharitri_sdk/**",
  "dharitri_sdk/py.typed"
]

exclude = [
  ".github",
  "./examples",
  ".vscode",
  "./dharitri_sdk/testutils/",
  "./docs",
  "*_test.py"
]
